// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2alpha;

import "wfa/measurement/internal/reporting/v2alpha/measurement.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2alpha";
option java_multiple_files = true;

// Internal service for persistence of Measurement entities.
service Measurements {
  rpc SetCmmsMeasurementId(SetCmmsMeasurementIdRequest) returns (Measurement);

  rpc BatchSetCmmsMeasurementIds(BatchSetCmmsMeasurementIdsRequest)
      returns (stream Measurement);

  rpc SetMeasurementResult(SetMeasurementResultRequest) returns (Measurement);

  rpc BatchSetMeasurementResults(BatchSetMeasurementResultsRequest)
      returns (stream Measurement);

  rpc SetMeasurementFailure(SetMeasurementFailureRequest) returns (Measurement);

  rpc BatchSetMeasurementFailures(BatchSetMeasurementFailuresRequest)
      returns (stream Measurement);
}

message SetCmmsMeasurementIdRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;

  fixed64 external_measurement_id = 2;

  // `Measurement` ID from the CMMS public API.
  string cmms_measurement_id = 3;
}

message BatchSetCmmsMeasurementIdsRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;

  message MeasurementIds {
    fixed64 external_measurement_id = 1;
    // `Measurement` ID from the CMMS public API.
    string cmms_measurement_id = 2;
  }
  repeated MeasurementIds measurement_ids = 2;
}

message SetMeasurementResultRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;

  fixed64 external_measurement_id = 2;

  Measurement.Result result = 3;
}

message BatchSetMeasurementResultsRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;

  message MeasurementResult {
    fixed64 external_measurement_id = 1;
    Measurement.Result result = 2;
  }
  repeated MeasurementResult measurement_results = 2;
}

message SetMeasurementFailureRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;

  fixed64 external_measurement_id = 2;

  Measurement.Failure failure = 3;
}

message BatchSetMeasurementFailuresRequest {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;

  message MeasurementFailure {
    fixed64 external_measurement_id = 1;
    Measurement.Failure failure = 2;
  }
  repeated MeasurementFailure measurement_failures = 2;
}
